--- a/EladLibFlex/bin-debug/TurboBindingExample.html
+++ b/EladLibFlex/bin-debug/TurboBindingExample.html
@@ -12,7 +12,7 @@
     // -->
     <head>
         <title></title>         
-        <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<!-- Include CSS to eliminate any default margins/padding and set the height of the html element and 
 		     the body element to 100%, because Firefox, or any Gecko based browser, interprets percentage as 
 			 the percentage of the height of its parent container, which has to be set explicitly.  Initially, 
@@ -20,7 +20,8 @@
 		-->
         <style type="text/css" media="screen"> 
 			html, body	{ height:100%; }
-			body { margin:0; padding:0; overflow:auto; text-align:center; }   
+			body { margin:0; padding:0; overflow:auto; text-align:center; 
+			       background-color: #ffffff; }   
 			#flashContent { display:none; }
         </style>
 		
@@ -65,9 +66,11 @@
 	        	To view this page ensure that Adobe Flash Player version 
 				10.0.0 or greater is installed. 
 			</p>
-			<a href="http://www.adobe.com/go/getflashplayer">
-				<img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash Player" />
-			</a>
+			<script type="text/javascript"> 
+				var pageHost = ((document.location.protocol == "https:") ? "https://" :	"http://"); 
+				document.write("<a href='http://www.adobe.com/go/getflashplayer'><img src='" 
+								+ pageHost + "www.adobe.com/images/shared/download_buttons/get_flash_player.gif' alt='Get Adobe Flash player' /></a>" ); 
+			</script> 
         </div>
 	   	
        	<noscript>
@@ -77,25 +80,25 @@
                 <param name="bgcolor" value="#ffffff" />
                 <param name="allowScriptAccess" value="sameDomain" />
                 <param name="allowFullScreen" value="true" />
-                <!--[if !IE]>
+                <!--[if !IE]>-->
                 <object type="application/x-shockwave-flash" data="TurboBindingExample.swf" width="100%" height="100%">
                     <param name="quality" value="high" />
                     <param name="bgcolor" value="#ffffff" />
                     <param name="allowScriptAccess" value="sameDomain" />
                     <param name="allowFullScreen" value="true" />
-                <![endif]-->
-                <!--[if gte IE 6]>
+                <!--<![endif]-->
+                <!--[if gte IE 6]>-->
                 	<p> 
                 		Either scripts and active content are not permitted to run or Adobe Flash Player version
                 		10.0.0 or greater is not installed.
                 	</p>
-                <![endif]-->
+                <!--<![endif]-->
                     <a href="http://www.adobe.com/go/getflashplayer">
                         <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash Player" />
                     </a>
-                <!--[if !IE]>
+                <!--[if !IE]>-->
                 </object>
-                <![endif]-->
+                <!--<![endif]-->
             </object>
 	    </noscript>		
    </body>
